@@ -26,11 +26,12 @@ public:
   virtual Box get_char (int ascii) const;
   virtual Box text_dimension (String)  const;
   virtual Molecule find_by_name (String) const;
-
   DECLARE_SMOBS (Font_metric,);
 private:
   Font_metric (Font_metric const&); // no copy.
 protected:
+  virtual void derived_mark();
+
   Font_metric ();
 };
 
